--- a/src/assets/css/landing.css
+++ b/src/assets/css/landing.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap");
 *,
 *::before,
 *::after {
@@ -15,36 +16,71 @@ body {
     font-size: 16px;
     line-height: 1.5;
     color: #030303;
-    background-color: #f1f1f1;
-    display: grid;
-    place-items: center;
 }
-.card {
-    text-align: center;
-    width: 90%;
-    max-width: 380px;
-    padding: 2rem;
-    border-radius: 20px;
-    background: #f5f5f5;
-    box-shadow: 20px 20px 60px #bebebe, -20px -20px 60px #ffffff;
+.container {
+    background-image: url("../img/landing-bg.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    width: 100%;
+    height: 100%;
     display: flex;
     flex-direction: column;
-    gap: 1.5rem;
+    align-items: center;
+    justify-content: space-between;
+    padding: 3rem 1rem;
+    text-align: center;
+}
+.images {
+    margin-top: -30px;
+}
+.siac {
+    height: 200px;
+}
+.mapollon {
+    height: 100px;
 }
 .btn {
     display: block;
     padding: 0.5rem 1rem;
-    border: 1px solid #030303;
-    border-radius: 5px;
-    background-color: #030303;
-    color: #f5f5f5;
+    border-radius: 20px;
     font-size: 1rem;
     font-weight: 500;
     text-decoration: none;
     cursor: pointer;
-}
-.small {
-    font-size: 0.8rem;
-    font-weight: 400;
     color: #030303;
+}
+.content {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+.title,
+.text {
+    font-family: "Poppins", sans-serif;
+    color: #fcfcfc;
+}
+.title {
+    text-transform: uppercase;
+    font-size: 1.25rem;
+    font-weight: 700;
+    margin-bottom: 1rem;
+}
+.text {
+    padding: 0 2rem;
+    font-size: 1rem;
+    font-weight: 400;
+}
+.primary {
+    border: 1px solid #e88bb2;
+    background-color: #e88bb2;
+}
+.secondary {
+    border: 1px solid #e8b6cb;
+    background-color: #e8b6cb;
+}
+.buttons {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
 }
