--- a/src/assets/css/login.css
+++ b/src/assets/css/login.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap");
+
 *,
 *::before,
 *::after {
@@ -6,74 +7,90 @@
     margin: 0;
     padding: 0;
 }
+:root {
+    --font-family: "Inter", sans-serif;
+    --font-size: 16px;
+    --regular: 400;
+    --dark: #010101;
+    --white: #fcfcfc;
+    --primary: #e88bb2;
+    --secondary: #e8b6cb;
+}
 html,
 body {
     height: 100%;
 }
 body {
-    font-family: "Inter", sans-serif;
-    font-size: 16px;
-    line-height: 1.5;
-    color: #030303;
-    background-color: #f1f1f1;
-    display: grid;
-    place-items: center;
+    font-family: var(--font-family);
+    font-size: var(--font-size);
+    font-weight: var(--regular);
+    color: var(--dark);
+    background-color: var(--white);
 }
-.card {
-    text-align: center;
-    width: 90%;
-    max-width: 380px;
-    padding: 2rem;
-    border-radius: 20px;
-    background: #f5f5f5;
-    box-shadow: 20px 20px 60px #bebebe, -20px -20px 60px #ffffff;
-    display: flex;
-    flex-direction: column;
-    gap: 1.5rem;
-}
-form {
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-}
-.input-group {
-    display: flex;
-    flex-direction: column;
-    gap: 0.5rem;
-    text-align: left;
-}
-.input-group label {
+
+label {
+    font-weight: 600;
     text-indent: 10px;
+    margin-bottom: 0.5rem;
 }
-.input-group input {
+
+input {
+    margin-bottom: 1rem;
     padding: 0.5rem;
     border: 1px solid #ccc;
     border-radius: 5px;
-    background-color: #f5f5f5;
-    color: #030303;
-    font-size: 0.875rem;
-    font-weight: 400;
 }
-.input-group input:focus {
+
+input:focus {
     outline: none;
-    border-color: #030303;
+    border: 1px solid var(--primary);
 }
-.btn {
-    margin-top: 1rem;
-    display: block;
-    padding: 0.5rem 1rem;
-    border: 1px solid #030303;
-    border-radius: 5px;
-    background-color: #030303;
-    color: #f5f5f5;
-    font-family: "Inter", sans-serif;
-    font-size: 1rem;
-    font-weight: 500;
-    text-decoration: none;
+
+a {
+    border: none;
+    background-color: transparent;
     cursor: pointer;
+    text-decoration: none;
+    color: var(--primary);
 }
-.small {
-    font-size: 0.8rem;
-    font-weight: 400;
-    color: #030303;
+
+a:hover {
+    text-decoration: underline;
+}
+
+.btn {
+    font-family: var(--font-family);
+    font-size: var(--font-size);
+    font-weight: 600;
+    width: 12rem;
+    padding: 0.5rem 1rem;
+    border-radius: 22px;
+    cursor: pointer;
+    text-align: center;
+    margin: 2rem auto 0 auto;
+}
+
+.primary {
+    background-color: var(--primary);
+    border: 1px solid var(--primary);
+}
+
+.secondary {
+    background-color: var(--secondary);
+    border: 1px solid var(--secondary);
+}
+
+.previous {
+    position: absolute;
+    top: 1rem;
+    left: 1rem;
+}
+
+body {
+    background: url("../img/landing-bg.png") no-repeat center/cover var(--white);
+}
+
+input.invalid {
+    border: 1px solid #ff0000;
+    background-color: #ffdddd;
 }
