updated register page

--- a/src/assets/css/register.css
+++ b/src/assets/css/register.css
@@ -10,68 +10,142 @@ html,
 body {
     height: 100%;
 }
+:root {
+    --font-family: "Inter", sans-serif;
+    --font-size: 16px;
+    --line-height: 1.5;
+    --black: 700;
+    --bold: 600;
+    --regular: 400;
+    --light: 300;
+    --dark: #010101;
+    --darkgrey: #333;
+    --white: #fcfcfc;
+    --primary: #e88bb2;
+    --secondary: #e8b6cb;
+}
+
 body {
-    font-family: "Inter", sans-serif;
-    font-size: 16px;
-    line-height: 1.5;
-    color: #030303;
-    background-color: #f1f1f1;
-    display: grid;
-    place-items: center;
+    font-family: var(--font-family);
+    font-size: var(--font-size);
+    font-weight: var(--regular);
+    line-height: var(--line-height);
+    color: var(--dark);
+    background-color: var(--white);
 }
-.card {
-    text-align: center;
-    width: 90%;
-    max-width: 380px;
-    padding: 2rem;
-    border-radius: 20px;
-    background: #f5f5f5;
-    box-shadow: 20px 20px 60px #bebebe, -20px -20px 60px #ffffff;
-    display: flex;
-    flex-direction: column;
-    gap: 1.5rem;
-}
-form {
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-}
-.input-group {
-    display: flex;
-    flex-direction: column;
-    gap: 0.5rem;
-    text-align: left;
-}
-.input-group label {
+
+label {
+    font-weight: 600;
     text-indent: 10px;
+    margin-bottom: 0.5rem;
 }
-.input-group input {
+
+input {
+    margin-bottom: 1rem;
     padding: 0.5rem;
     border: 1px solid #ccc;
     border-radius: 5px;
-    background-color: #f5f5f5;
-    color: #030303;
-    font-size: 0.875rem;
-    font-weight: 400;
 }
-.input-group input:focus {
+
+input:focus {
     outline: none;
-    border-color: #030303;
+    border: 1px solid var(--primary);
 }
-.btn {
-    display: block;
-    padding: 0.5rem 1rem;
-    border: 1px solid #030303;
-    border-radius: 5px;
-    background-color: #030303;
-    color: #f5f5f5;
-    font-size: 1rem;
-    font-weight: 500;
-    text-decoration: none;
+
+a,
+.link {
+    border: none;
+    background-color: transparent;
     cursor: pointer;
+    text-decoration: none;
+    color: var(--primary);
 }
-.small {
-    font-size: 0.8rem;
-    font-weight: 400;
-    color: #030303;
+
+a:hover,
+.link:hover {
+    text-decoration: underline;
+}
+
+.btn {
+    font-family: var(--font-family);
+    font-size: var(--font-size);
+    font-weight: 600;
+    width: 12rem;
+    padding: 0.5rem 1rem;
+    border-radius: 22px;
+    cursor: pointer;
+    text-align: center;
+    margin: 0 auto;
+}
+
+.primary {
+    background-color: var(--primary);
+    border: 1px solid var(--primary);
+}
+
+.secondary {
+    background-color: var(--secondary);
+    border: 1px solid var(--secondary);
+}
+
+.previous {
+    position: absolute;
+    top: 1rem;
+    left: 1rem;
+}
+body {
+    background: url("../img/landing-bg.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+}
+
+input.invalid {
+    border: 1px solid #ff0000;
+    background-color: #ffdddd;
+}
+/* Hide all steps by default: */
+.tab {
+    flex-direction: column;
+    display: none;
+}
+.birth {
+    display: flex;
+    gap: 0.5rem;
+}
+.birth input {
+    width: 50%;
+    display: inline;
+    flex: 1;
+    text-align: center;
+}
+.dots {
+    text-align: center;
+    margin-bottom: 0.75rem;
+}
+/* Make circles that indicate the steps of the form: */
+.step {
+    height: 10px;
+    width: 10px;
+    margin: 0 2px;
+    background-color: #ccc;
+    border: none;
+    border-radius: 50%;
+    display: inline-block;
+}
+/* Mark the active step: */
+.step.active {
+    background-color: var(#333);
+}
+/* Mark the steps that are finished and valid: */
+.step.finish {
+    background-color: var(--primary);
+}
+
+.btns {
+    margin-top: 2rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 0.5rem;
 }
