updated tab-bar looking to be able to click the full icons

--- a/src/assets/css/tab-bar.css
+++ b/src/assets/css/tab-bar.css
@@ -29,6 +29,9 @@
     color: #666;
     text-decoration: none;
 }
+.tab_label {
+    text-align: center;
+}
 
 /* on Tablet */
 @media (min-width: 768px) {
