--- a/src/assets/css/scan.css
+++ b/src/assets/css/scan.css
@@ -17,3 +17,8 @@ body {
     color: #030303;
     background-color: #f1f1f1;
 }
+.container {
+    height: 100%;
+    display: grid;
+    place-items: center;
+}
