--- a/src/assets/css/map.css
+++ b/src/assets/css/map.css
@@ -44,14 +44,10 @@ body {
     align-items: center;
     justify-content: center;
 }
-#map {
-    height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+.map-container {
+    padding: 1rem;
 }
-.map-img {
-    width: 95%;
-    max-width: fit-content;
-    object-fit: contain;
+.pin-icon {
+    width: 24px;
+    height: 24px;
 }
