--- a/src/assets/css/profile.css
+++ b/src/assets/css/profile.css
@@ -6,61 +6,83 @@
     margin: 0;
     padding: 0;
 }
-html,
-body {
-    height: 100%;
-}
+
 body {
     font-family: "Inter", sans-serif;
+    height: 100vh;
     font-size: 16px;
-    line-height: 1.5;
     color: #030303;
-    background-color: #f1f1f1;
-    display: grid;
-    grid-template-rows: 80px auto 80px;
+    background: url("../img/landing-bg.png") no-repeat;
+    background-size: cover;
 }
 
-.top-bar {
-    padding: 1rem;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background-color: #fff;
-    border-radius: 0 0 10px 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-}
-.logout {
-    display: flex;
-}
-.profile-card {
+.user-banner {
+    height: 10vh;
+    background: rgba(255, 255, 255, 0.4);
     display: flex;
     flex-direction: column;
     justify-content: center;
-    width: 92%;
-    margin: 1rem auto;
-    padding: 2rem 1rem;
-    background-color: #fff;
-    border: none;
-    border-radius: 20px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    padding-left: 30px;
 }
-.profile-pic {
-    display: block;
-    margin: 0 auto;
-    height: 120px;
+
+.user-infos-section {
+    padding: 35px 0 0 20px;
+    color: #ffffff;
+
 }
-.info-group {
+
+.infos-title {
+    border-left: 5px solid #ffffff; /* Remplacez "#ffffff" par la couleur de votre choix */
+    padding-left: 13px;
+}
+
+.user-infos {
     display: flex;
     flex-direction: column;
-    gap: 0.25rem;
-    margin-top: 1rem;
+    margin-top: 60px;
 }
-.label {
-    text-indent: 10px;
-    font-weight: 500;
+
+.user-infos input {
+    height: 2.5rem;
+    border: none;
+    width: 100%;
+    display: flex;
+    margin-bottom: 12px;
+    border-radius: 0 20px 20px 0;
 }
-.value {
-    padding: 0.5rem;
-    border: 1px solid #ccc;
-    border-radius: 5px;
+
+.inputs input[type="text"]::placeholder {
+    padding-left: 15px;
+  }
+
+.inputs {
+    border-radius: 0 20px 20px 0;
+    margin: 0 90px 18px 0;
+    background: #FFE09D;
+    height: 50px;
+}
+
+.first-input input {
+    border-radius: 0 20px 20px 0;
+}
+
+.disconnect {
+    margin-top: 5rem;
+
+}
+
+.disconnect button {
+    height: 3rem;
+    width: 90%;
+    border-radius: 0 20px 20px 0;
+    border: none;
+    background: #FFE09D;
+    font-size: 17px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.disconnect i {
+    font-size: 30px;
 }
