--- a/src/assets/css/artist.css
+++ b/src/assets/css/artist.css
@@ -16,7 +16,7 @@ body {
     font-size: 16px;
     line-height: 1.5;
     color: #fff;
-    background-color: #333;
+    background-color: #000;
 }
 .container {
     display: flex;
@@ -28,12 +28,14 @@ body {
     display: flex;
     flex-direction: column;
     gap: 1rem;
+    background-image: url("../img/aklarousse/bg.png");
 }
 header {
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 0.5rem;
+    color: #000;
 }
 .previous {
     display: flex;
@@ -128,6 +130,9 @@ hr {
     aspect-ratio: 1/1;
     object-fit: cover;
     margin: 1rem auto;
+}
+.see-also {
+    margin-bottom: calc(80px + 1vh);
 }
 
 /* TAB-BAR STYLES */
