--- a/src/assets/css/landing.css
+++ b/src/assets/css/landing.css
@@ -35,7 +35,7 @@ body {
     margin-top: -30px;
 }
 .siac {
-    height: 200px;
+    height: 155px;
 }
 .mapollon {
     height: 100px;
@@ -67,20 +67,28 @@ body {
     margin-bottom: 1rem;
 }
 .text {
-    padding: 0 2rem;
     font-size: 1rem;
     font-weight: 400;
 }
 .primary {
+    border: 1px solid #e8b6cb;
+    background-color: #e8b6cb;
+}   
+.secondary {
     border: 1px solid #e88bb2;
     background-color: #e88bb2;
 }
-.secondary {
-    border: 1px solid #e8b6cb;
-    background-color: #e8b6cb;
+.guest {
+    border: 1px solid #FFE09D;
+    background-color: #FFE09D;
 }
+
 .buttons {
     display: flex;
     flex-direction: column;
     gap: 1rem;
+}
+
+.buttons p {
+    color: #fff;
 }
