--- a/src/assets/css/profile.css
+++ b/src/assets/css/profile.css
@@ -17,12 +17,11 @@ body {
 }
 
 .user-banner {
-    height: 10vh;
+    height: 7vh;
     background: rgba(255, 255, 255, 0.4);
     display: flex;
-    flex-direction: column;
-    justify-content: center;
     padding-left: 30px;
+    align-items: center;
 }
 
 .user-infos-section {
@@ -32,17 +31,17 @@ body {
 }
 
 .infos-title {
-    border-left: 5px solid #ffffff; /* Remplacez "#ffffff" par la couleur de votre choix */
+    border-left: 5px solid #ffffff;
     padding-left: 13px;
 }
 
-.user-infos {
+.user-form {
     display: flex;
     flex-direction: column;
     margin-top: 60px;
 }
 
-.user-infos input {
+.user-form input {
     height: 2.5rem;
     border: none;
     width: 100%;
@@ -61,10 +60,6 @@ body {
     margin: 0 90px 18px 0;
     background: #FFE09D;
     height: 50px;
-}
-
-.first-input input {
-    border-radius: 0 20px 20px 0;
 }
 
 .disconnect {
