--- a/src/assets/css/map.css
+++ b/src/assets/css/map.css
@@ -24,8 +24,8 @@ body {
     display: flex;
     align-items: flex-end;
     justify-content: space-between;
-    width: 90%;
-    margin: 0 auto;
+    width: 100%;
+    padding: 0 25px;
 }
 .logo {
     display: flex;
