--- a/src/assets/css/likes.css
+++ b/src/assets/css/likes.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap");
+
 *,
 *::before,
 *::after {
@@ -6,14 +7,129 @@
     margin: 0;
     padding: 0;
 }
-hmtl,
+
+html,
 body {
-    height: 100%;
-}
-body {
-    font-family: "Inter", sans-serif;
+    font-family: "Inter", sans-serif;!important;
     font-size: 16px;
-    line-height: 1.5;
     color: #030303;
     background-color: #f1f1f1;
+}
+
+.container {
+    background-image: url("../img/landing-bg.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    width: 100%;
+    height: 100%;
+    align-items: center;
+    padding: 3rem 1rem;
+    text-align: center;
+}
+
+
+/* Masonry grid */
+.masonry {
+    column-gap: 30px;
+    column-fill: initial;
+
+}
+
+/* Masonry item */
+.masonry .brick {
+    margin-bottom: 30px;
+    display: inline-block;
+    vertical-align: top;
+    position: relative;
+}
+
+/* Content wrapper for image and text */
+.content-wrapper {
+    position: relative;
+}
+
+/* Image inside content wrapper */
+.content-wrapper img {
+    width: 100%;
+    display: block;
+}
+
+/* Text container for headings */
+.text-container {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    padding: 10px;
+    background-color: rgba(255, 255, 255, 0.8);
+    text-align: left;
+}
+
+/* H2 styling */
+.text-container h2, .text-container h3 {
+    margin: 0;
+}
+
+.span {
+    font-weight: 700;
+}
+
+/* Heart button styling */
+.heart-button {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    background-color: white;
+    border: none;
+    border-radius: 50%;
+    padding: 8px;
+    cursor: pointer;
+}
+
+.heart-button img {
+    height: 30px;
+}
+
+/* Bordered masonry */
+.masonry.bordered {
+    column-rule: 1px solid #eee;
+    column-gap: 50px;
+}
+
+.masonry.bordered .brick {
+    padding-bottom: 25px;
+    margin-bottom: 25px;
+    border-bottom: 1px solid #eee;
+}
+
+/* Gutterless masonry */
+.masonry.gutterless {
+    column-gap: 0;
+}
+
+.masonry.gutterless .brick {
+    margin-bottom: 0;
+}
+
+/* Masonry on tablets */
+@media only screen  and (max-width: 1023px) {
+    .masonry {
+        column-count: 1;
+    }
+}
+
+/* Masonry on big screens */
+@media only screen and (min-width: 1024px) {
+    .desc {
+        font-size: 1.25em;
+    }
+
+    .intro {
+        letter-spacing: 1px;
+    }
+
+    .masonry {
+        column-count: 3;
+    }
 }
