--- a/src/assets/css/likes.css
+++ b/src/assets/css/likes.css
@@ -8,25 +8,37 @@
     padding: 0;
 }
 
-html,
-body {
-    font-family: "Inter", sans-serif;!important;
+html, body {
+    font-family: "Inter", sans-serif;
     font-size: 16px;
     color: #030303;
-    background-color: #f1f1f1;
+    margin: 0;
 }
 
-.container {
+body {
     background-image: url("../img/landing-bg.png");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
+    background-attachment: fixed;
+}
+
+.top-bar {
+    display: flex;
+    align-items: flex-end;
+    justify-content: space-between;
+    width: 100%;
+    padding: 0 25px;
+}
+
+.container {
     width: 100%;
     height: 100%;
     align-items: center;
     padding: 3rem 1rem;
     text-align: center;
 }
+
 
 
 /* Masonry grid */
