--- a/src/assets/css/scan.css
+++ b/src/assets/css/scan.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap");
+
 *,
 *::before,
 *::after {
@@ -6,16 +7,35 @@
     margin: 0;
     padding: 0;
 }
+
 html,
 body {
     height: 100%;
 }
-body {
+
+html, body {
     font-family: "Inter", sans-serif;
     font-size: 16px;
-    color: #030303;
-    background-color: #f1f1f1;
+    color: #fff;
+    margin: 0;
 }
+
+body {
+    background-image: url("../img/landing-bg.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+}
+
+.top-bar {
+    display: flex;
+    align-items: flex-end;
+    justify-content: space-between;
+    width: 100%;
+    padding: 0 25px;
+}
+
 .container {
     height: 100%;
     display: flex;
@@ -24,6 +44,7 @@ body {
     flex-direction: column;
     gap: 1rem;
 }
+
 #qr-reader {
     display: flex;
     justify-content: center;
@@ -35,6 +56,7 @@ body {
     padding: 1rem !important;
     position: static !important;
 }
+
 #html5-qrcode-button-camera-permission,
 #html5-qrcode-button-camera-start,
 #html5-qrcode-button-camera-stop {
