--- a/src/assets/css/artist.css
+++ b/src/assets/css/artist.css
@@ -28,7 +28,6 @@ body {
     display: flex;
     flex-direction: column;
     gap: 1rem;
-    background-image: url("../img/aklarousse/bg.png");
 }
 header {
     display: flex;
@@ -73,10 +72,13 @@ header {
     position: relative;
 }
 .media {
+    position: relative;
     display: block;
     width: 90%;
     aspect-ratio: 1/1;
     margin: 0 auto;
+    z-index: 1;
+    border-radius: 5px;
 }
 .plume-haute {
     position: absolute;
