--- a/src/assets/css/artist.css
+++ b/src/assets/css/artist.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap");
+
 *,
 *::before,
 *::after {
@@ -6,10 +7,12 @@
     margin: 0;
     padding: 0;
 }
+
 html,
 body {
     height: 100%;
 }
+
 body {
     height: 100vh;
     font-family: "Inter", sans-serif;
@@ -18,17 +21,20 @@ body {
     color: #fff;
     background-color: #000;
 }
+
 .container {
     display: flex;
     flex-direction: column;
     gap: 1rem;
     overflow-x: hidden;
 }
+
 .bg {
     display: flex;
     flex-direction: column;
     gap: 1rem;
 }
+
 header {
     display: flex;
     justify-content: space-between;
@@ -36,6 +42,7 @@ header {
     padding: 0.5rem;
     color: #000;
 }
+
 .previous {
     display: flex;
     align-items: center;
@@ -43,6 +50,7 @@ header {
     color: #030303;
     cursor: pointer;
 }
+
 .picture {
     display: block;
     margin: 0 auto;
@@ -52,25 +60,30 @@ header {
     border: none;
     border-radius: 50%;
 }
+
 .profile {
     color: #fff;
     z-index: 2;
     line-height: 1;
 }
+
 .aw-title {
     margin-top: 1rem;
     text-transform: uppercase;
     text-align: center;
 }
+
 .at-name {
     text-align: center;
     font-size: 1.25rem;
     font-weight: 500;
 }
+
 .video {
     margin: 2rem 0;
     position: relative;
 }
+
 .media {
     position: relative;
     display: block;
@@ -80,6 +93,7 @@ header {
     z-index: 1;
     border-radius: 5px;
 }
+
 .plume-haute {
     position: absolute;
     top: -20px;
@@ -89,6 +103,7 @@ header {
     z-index: 0;
     filter: blur(1px);
 }
+
 .plume-basse {
     position: absolute;
     bottom: -30px;
@@ -96,13 +111,40 @@ header {
     width: 100px;
     z-index: 2;
 }
-.carroussel {
+
+.slider {
+    width: 90%;
+    margin: 20px auto;
+    text-align: center;
     display: flex;
-    justify-content: center;
+    align-content: center;
     align-items: center;
-    gap: 0.5rem;
-    margin: 1rem 0;
+    justify-content: center;
 }
+
+.slick-slide {
+    margin: 0 20px;
+}
+
+.slick-prev:before,
+.slick-next:before {
+    color: white;
+}
+
+
+.slick-slide {
+    transition: all ease-in-out .3s;
+    opacity: .2;
+}
+
+.slick-active {
+    opacity: .5;
+}
+
+.slick-current {
+    opacity: 1;
+}
+
 .separator {
     display: flex;
     justify-content: center;
@@ -110,22 +152,27 @@ header {
     margin: 0 auto;
     gap: 1rem;
 }
+
 hr {
     height: 5px;
     background-color: #fff;
     border: none;
     border-radius: 5px;
 }
+
 .big {
     width: 80%;
 }
+
 .small {
     width: 20%;
 }
+
 .text {
     padding: 0 1rem;
     text-align: center;
 }
+
 .artwork-img {
     display: block;
     width: 90%;
@@ -133,6 +180,7 @@ hr {
     object-fit: cover;
     margin: 1rem auto;
 }
+
 .see-also {
     margin-bottom: calc(80px + 1vh);
 }
