--- a/src/assets/css/register.css
+++ b/src/assets/css/register.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap");
+
 *,
 *::before,
 *::after {
@@ -6,10 +7,12 @@
     margin: 0;
     padding: 0;
 }
+
 html,
 body {
     height: 100%;
 }
+
 :root {
     --font-family: "Inter", sans-serif;
     --font-size: 16px;
@@ -29,9 +32,39 @@ body {
     font-family: var(--font-family);
     font-size: var(--font-size);
     font-weight: var(--regular);
-    line-height: var(--line-height);
     color: var(--dark);
     background-color: var(--white);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: url("../img/landing-bg.png") no-repeat center/cover var(--white);
+}
+
+.container {
+    width: 100%;
+    max-width: 380px;
+    border-radius: 20px;
+    color: #fcfcfc;
+}
+
+h1 {
+    font-size: 1.75rem;
+    text-align: center;
+    margin-bottom: 1.5rem;
+}
+
+.input-group {
+    display: flex;
+    flex-direction: column;
+}
+
+input {
+    margin-bottom: 1.5rem;
+}
+
+.center {
+    display: block;
+    margin: 1.5rem auto 0 auto;
 }
 
 label {
@@ -42,9 +75,9 @@ label {
 
 input {
     margin-bottom: 1rem;
-    padding: 0.5rem;
+    padding: 0.8rem;
     border: 1px solid #ccc;
-    border-radius: 5px;
+    border-radius: 13px
 }
 
 input:focus {
@@ -93,36 +126,35 @@ a:hover,
     top: 1rem;
     left: 1rem;
 }
-body {
-    background: url("../img/landing-bg.png");
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-}
 
 input.invalid {
     border: 1px solid #ff0000;
     background-color: #ffdddd;
 }
+
 /* Hide all steps by default: */
 .tab {
     flex-direction: column;
     display: none;
 }
+
 .birth {
     display: flex;
     gap: 0.5rem;
 }
+
 .birth input {
     width: 50%;
     display: inline;
     flex: 1;
     text-align: center;
 }
+
 .dots {
     text-align: center;
     margin-bottom: 0.75rem;
 }
+
 /* Make circles that indicate the steps of the form: */
 .step {
     height: 10px;
@@ -133,10 +165,12 @@ input.invalid {
     border-radius: 50%;
     display: inline-block;
 }
+
 /* Mark the active step: */
 .step.active {
     background-color: var(#333);
 }
+
 /* Mark the steps that are finished and valid: */
 .step.finish {
     background-color: var(--primary);
@@ -148,4 +182,24 @@ input.invalid {
     flex-direction: column;
     justify-content: center;
     gap: 0.5rem;
+}
+
+
+.error-box {
+    margin-top: 10px;
+    padding: 10px;
+    background-color: #ff0000;
+    border-radius: 13px;
+
+}
+
+.error-message {
+    display: flex;
+    align-items: center;
+    color: #fff;
+    font-weight: bold;
+}
+
+.error-message img{
+    margin-right: 10px;
 }
