--- a/src/assets/css/login.css
+++ b/src/assets/css/login.css
@@ -91,7 +91,12 @@ a:hover {
     position: absolute;
     top: 1rem;
     left: 1rem;
+    background-color: #fff;
+    border-radius: 39px;
+    padding: 6px;
+    display: flex;
 }
+
 
 .error-box {
     margin-top: 10px;
