--- a/src/assets/css/register.css
+++ b/src/assets/css/register.css
@@ -125,6 +125,10 @@ a:hover,
     position: absolute;
     top: 1rem;
     left: 1rem;
+    background-color: #fff;
+    border-radius: 39px;
+    padding: 6px;
+    display: flex;
 }
 
 input.invalid {
