--- a/src/assets/css/login.css
+++ b/src/assets/css/login.css
@@ -45,7 +45,8 @@ input {
     margin-bottom: 1rem;
     padding: 0.8rem;
     border: 1px solid #ccc;
-    border-radius: 13px
+    border-radius: 13px;
+    font-size: 16px;
 }
 
 input:focus {
