--- a/src/assets/css/artist.css
+++ b/src/assets/css/artist.css
@@ -109,6 +109,10 @@ header {
     line-height: 1.5;
 }
 
+.slider h3 {
+    margin-bottom: 10px;
+}
+
 .slick-slide {
     margin: 0 20px;
 }
@@ -163,6 +167,12 @@ hr {
     width: 90%;
     aspect-ratio: 1/1;
     object-fit: cover;
+    margin: 1rem auto;
+}
+
+.artworks-img {
+    display: block;
+    width: 90%;
     margin: 1rem auto;
 }
 
