--- a/src/assets/css/map.css
+++ b/src/assets/css/map.css
@@ -17,7 +17,7 @@ body {
     font-family: "Inter", sans-serif;
     font-size: 16px;
     color: #030303;
-    background-color: #f1f1f1;
+    background-color: #333;
 }
 .top-bar {
     display: flex;
