--- a/src/assets/css/map.css
+++ b/src/assets/css/map.css
@@ -77,15 +77,19 @@ body {
 
 .btn_close {
     position: absolute;
-    top: 10px; /* Ajustez la valeur selon votre besoin */
-    right: 10px; /* Ajustez la valeur selon votre besoin */
-    background: none;
-    border: none;
+    top: 10px;
+    right: 10px;
     cursor: pointer;
+    background-color: #ffe09d;
+    width: 40px;
+    border-radius: 23px;
+    height: 40px;
+    z-index: 2;
+    border: 1px solid black;
 }
 
 .btn_close img {
-    width: 40px;
+    width: 37px;
 }
 
 
