--- a/src/assets/css/map.css
+++ b/src/assets/css/map.css
@@ -52,7 +52,7 @@ body {
 }
 
 /*############################### */
-/*###### POPUP INFOS PACKS ###### */
+/*###### POPUP ARTIST LIST ###### */
 /*############################### */
 .popup {
     display: none;
@@ -67,7 +67,11 @@ body {
 }
 
 .popup-content {
-    background-color: #fff;
+    background-image: url("../img/landing-bg.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
     padding: 60px 20px 20px 20px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
     width: 100vw;
