--- a/src/assets/css/artist.css
+++ b/src/assets/css/artist.css
@@ -131,8 +131,7 @@ header {
     opacity: 1;
 }
 
-.slick-slider
-{
+.slick-slider {
     position: relative;
 
     display: block;
@@ -150,8 +149,7 @@ header {
     -webkit-tap-highlight-color: transparent;
 }
 
-.slick-list
-{
+.slick-list {
     position: relative;
 
     display: block;
@@ -160,19 +158,18 @@ header {
     margin: 0;
     padding: 0;
 }
-.slick-list:focus
-{
+
+.slick-list:focus {
     outline: none;
 }
-.slick-list.dragging
-{
+
+.slick-list.dragging {
     cursor: pointer;
     cursor: hand;
 }
 
 .slick-slider .slick-track,
-.slick-slider .slick-list
-{
+.slick-slider .slick-list {
     -webkit-transform: translate3d(0, 0, 0);
     -moz-transform: translate3d(0, 0, 0);
     -ms-transform: translate3d(0, 0, 0);
@@ -180,8 +177,7 @@ header {
     transform: translate3d(0, 0, 0);
 }
 
-.slick-track
-{
+.slick-track {
     position: relative;
     top: 0;
     left: 0;
@@ -190,65 +186,66 @@ header {
     margin-left: auto;
     margin-right: auto;
 }
+
 .slick-track:before,
-.slick-track:after
-{
+.slick-track:after {
     display: table;
 
     content: '';
 }
-.slick-track:after
-{
+
+.slick-track:after {
     clear: both;
 }
-.slick-loading .slick-track
-{
+
+.slick-loading .slick-track {
     visibility: hidden;
 }
 
-.slick-slide
-{
+.slick-slide {
     display: none;
     float: left;
 
     height: 100%;
     min-height: 1px;
 }
-[dir='rtl'] .slick-slide
-{
+
+[dir='rtl'] .slick-slide {
     float: right;
 }
-.slick-slide img
-{
+
+.slick-slide img {
     display: block;
 }
-.slick-slide.slick-loading img
-{
+
+.slick-slide.slick-loading img {
     display: none;
 }
-.slick-slide.dragging img
-{
+
+.slick-slide.dragging img {
     pointer-events: none;
 }
-.slick-initialized .slick-slide
-{
+
+.slick-initialized .slick-slide {
     display: block;
 }
-.slick-loading .slick-slide
-{
+
+.slick-loading .slick-slide {
     visibility: hidden;
 }
-.slick-vertical .slick-slide
-{
+
+.slick-vertical .slick-slide {
     display: block;
 
     height: auto;
 
     border: 1px solid transparent;
 }
+
 .slick-arrow.slick-hidden {
     display: none;
 }
+
 /* Fin Slider */
 
 
@@ -316,6 +313,7 @@ hr {
     margin-left: 5px;
     font-style: italic;
     color: #cbcbcb;
+    margin-bottom: 10px;
 }
 
 .message-slide img {
@@ -333,3 +331,36 @@ hr {
     color: #cbcbcb;
 }
 
+.feedback {
+    border-left: 5px solid;
+    border-right: 5px solid;
+    border-bottom: 1px solid;
+    border-top: 0;
+    padding: 25px;
+    margin: 15px;
+    border-radius: 25px;
+    position: relative; /* Définir la position relative pour la section */
+
+}
+
+.feedback h2 {
+    position: absolute;
+    top: -20px;
+    left: 50%;
+    transform: translateX(-50%);
+    padding: 5px 10px;
+    text-transform: uppercase;
+}
+
+.feedback p {
+    text-align: center;
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 23px;
+}
+.feedback h3 {
+    margin-top: 15px;
+    font-size: 20px;
+    font-weight: 900;
+    text-align: center;
+}
