--- a/src/assets/css/artist.css
+++ b/src/assets/css/artist.css
@@ -364,3 +364,33 @@ hr {
     font-weight: 900;
     text-align: center;
 }
+
+
+
+
+
+.floating-button {
+    position: fixed;
+    bottom: 90px;
+    right: 20px;
+
+}
+
+.floating-button button {
+    background-color: white;
+    color: black;
+    border: none;
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    font-size: 16px;
+    cursor: pointer;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+    outline: none;
+    display: grid;
+    place-items: center;
+}
+
+.floating-button button:hover {
+    background-color: #f1f1f1;
+}
