--- a/src/assets/css/likes.css
+++ b/src/assets/css/likes.css
@@ -35,15 +35,31 @@ body {
     width: 100%;
     height: 100%;
     align-items: center;
-    padding: 3rem 1rem;
+    padding: 2rem 1rem;
     text-align: center;
+}
+
+.user-banner {
+    height: 7vh;
+    background: rgba(255, 255, 255, 0.4);
+    display: flex;
+    padding: 0 25px;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.user-banner h2 {
+    font-family: "Inter", sans-serif;
+    font-size: 24px;
+    color: #030303;
+    font-weight: bold;
 }
 
 
 
 /* Masonry grid */
 .masonry {
-    column-gap: 30px;
+    column-gap: 20px;
     column-fill: initial;
 
 }
@@ -127,7 +143,7 @@ body {
 /* Masonry on tablets */
 @media only screen  and (max-width: 1023px) {
     .masonry {
-        column-count: 1;
+        column-count: 2;
     }
 }
 
@@ -142,6 +158,6 @@ body {
     }
 
     .masonry {
-        column-count: 3;
+        column-count: 2;
     }
 }
