--- a/src/assets/css/map.css
+++ b/src/assets/css/map.css
@@ -82,16 +82,31 @@ body {
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
-    padding: 60px 20px 20px 20px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
     width: 100vw;
     height: 100vh;
     overflow: auto;
 }
 
+.user-banner {
+    height: 7vh;
+    background: rgba(255, 255, 255, 1);
+    display: flex;
+    padding: 0 25px;
+    align-items: center;
+    justify-content: space-between;
+    position: fixed;
+    width: 100vw;
+    z-index: 2;
+}
+
+.user-banner img {
+    height: 37px;
+}
+
+
 .btn_close {
     position: absolute;
-    top: 10px;
     right: 10px;
     cursor: pointer;
     background-color: #ffe09d;
@@ -124,7 +139,7 @@ body {
 
 /* Masonry grid */
 .masonry {
-    column-gap: 30px;
+    column-gap: 20px;
     column-fill: initial;
 }
 
